examples/fail/lexer/invalid_escape.bina
// EXPECT_LEXER_ERROR: unknown escape sequence
fn main() -> int {
    let s = "bad\qescape";
    return 0;
}
